--- a/.env.old
+++ b/.env.old
@@ -73,3 +73,18 @@ OAUTH2_REDIRECT_URI=https://your-app.koyeb.app/auth/callback
 # CORS_ALLOWED_ORIGINS=http://localhost:3000
 # OAUTH2_REDIRECT_URI=http://localhost:3000/auth/callback
 # NEXT_PUBLIC_API_URL=http://localhost:8080
+
+
+BUILD_TARGET=backend
+CORS_ALLOWED_ORIGINS=https://regulatory-lizzie-minart-4b05e250.koyeb.app
+GITHUB_CLIENT_ID=Ov23liRgKtvv6kggUZrz
+GITHUB_CLIENT_SECRET=2cf7d72eb04c816ac01983d0f1b3c999180915c2
+GOOGLE_CLIENT_ID=1029046560166-nuoh6lld7midqs2kuintgk36hqa67o88.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+JWT_SECRET=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
+MICROSOFT_CLIENT_ID=37106a2c-0ee1-416e-9516-c9590ac15e70
+MICROSOFT_CLIENT_SECRET=1lt8Q~CIquVnmm9OKcS4sQhm1tM6PW7LP3hpQcxs
+MICROSOFT_TENANT_ID=c250fade-30cc-4c47-88e5-6883a15016a3
+OAUTH2_REDIRECT_URI=https://regulatory-lizzie-minart-4b05e250.koyeb.app/auth/callback
+SPRING_DATASOURCE_URL=jdbc:postgresql://ep-young-scene-agtcmhn2.c-2.eu-central-1.pg.koyeb.app/koyebdb?user=koyeb-adm&password=npg_8VksjF7cPYnM
+
