--- a/templates/backend-client/.env.example
+++ b/templates/backend-client/.env.example
@@ -1,6 +1,7 @@
 # =================================
 # Backend Client Environment
 # =================================
+# No JWT_SECRET required! Token validation is done via introspection.
 
 # Server Configuration
 SERVER_PORT=8080
@@ -15,12 +16,8 @@ DATABASE_PASSWORD=postgres
 # URL of the central auth server (the demo project)
 AUTH_SERVER_URL=http://localhost:8081
 
-# JWT Secret - MUST match the auth server's JWT_SECRET
-# Generate with: openssl rand -base64 32
-JWT_SECRET=your-secret-key-must-be-at-least-256-bits-long-for-security
-
-# Access token expiration in milliseconds (should match auth server)
-ACCESS_TOKEN_EXPIRATION=900000
+# Cache TTL for token introspection (seconds, default: 300 = 5 minutes)
+# AUTH_CACHE_TTL=300
 
 # CORS Configuration
 # Comma-separated list of allowed origins
