--- a/templates/backend-client/pom.xml
+++ b/templates/backend-client/pom.xml
@@ -83,6 +83,16 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Caching for token introspection -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
