--- a/.env.example
+++ b/.env.example
@@ -68,8 +68,13 @@ OAUTH2_REDIRECT_URI=https://your-app.koyeb.app/auth/callback
 # ===========================================
 # LOCAL DEVELOPMENT (Separate Services)
 # ===========================================
-# Uncomment these for local development with separate frontend/backend:
+# For local development with separate frontend (port 3000) and backend (port 8080):
 #
 # CORS_ALLOWED_ORIGINS=http://localhost:3000
 # OAUTH2_REDIRECT_URI=http://localhost:3000/auth/callback
+#
+# Also create frontend/.env.local with:
 # NEXT_PUBLIC_API_URL=http://localhost:8080
+#
+# NOTE: For unified deployment, do NOT set NEXT_PUBLIC_API_URL.
+# When unset, the frontend uses relative paths (same origin as backend).
