--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,8 @@ MICROSOFT_CLIENT_SECRET=your-microsoft-client-secret
 # Your deployed app URL (same for frontend and backend in unified mode)
 CORS_ALLOWED_ORIGINS=https://your-app.koyeb.app
 OAUTH2_REDIRECT_URI=https://your-app.koyeb.app/auth/callback
+# Base URL for OAuth2 callbacks (must be HTTPS in production)
+OAUTH2_BASE_URL=https://your-app.koyeb.app
 
 # ===========================================
 # OAUTH CALLBACK URLs TO CONFIGURE
