--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -28,6 +28,7 @@ server {
     location /api/auth/callback {
         proxy_pass http://frontend/api/auth/callback;
         proxy_read_timeout 90s;
+        proxy_pass_header Set-Cookie;
     }
 
     # Backend API routes
@@ -57,6 +58,8 @@ server {
     location / {
         proxy_pass http://frontend;
         proxy_read_timeout 90s;
+        proxy_pass_header Set-Cookie;
+        proxy_pass_header Cookie;
     }
 
     # Next.js specific routes
