--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -30,10 +30,15 @@ server {
     location /api/auth/callback {
         proxy_pass http://frontend/api/auth/callback;
         proxy_read_timeout 90s;
-        # Ensure cookies and redirects work properly
         proxy_pass_header Set-Cookie;
         proxy_pass_header Location;
         proxy_intercept_errors off;
+    }
+
+    location /api/auth/logout {
+        proxy_pass http://frontend/api/auth/logout;
+        proxy_read_timeout 90s;
+        proxy_pass_header Set-Cookie;
     }
 
     # Backend API routes
