client templates update

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,14 @@ OAUTH2_REDIRECT_URI=https://your-app.koyeb.app/api/auth/callback
 OAUTH2_BASE_URL=https://your-app.koyeb.app
 
 # ===========================================
+# CLIENT APP REDIRECTS (Optional)
+# ===========================================
+# Allowed domains for client app OAuth redirects (comma-separated)
+# Supports wildcards like *.koyeb.app
+# Leave empty to only allow redirects to the default OAUTH2_REDIRECT_URI domain
+# OAUTH2_ALLOWED_REDIRECT_DOMAINS=*.koyeb.app,localhost
+
+# ===========================================
 # OAUTH CALLBACK URLs TO CONFIGURE
 # ===========================================
 # Add these to your OAuth provider consoles:
