--- a/templates/.env.example
+++ b/templates/.env.example
@@ -5,6 +5,7 @@
 # Copy this file to .env and fill in your values
 #
 # NOTE: No JWT_SECRET required! Token validation is done via introspection.
+# NOTE: No NEXT_PUBLIC_API_URL required! Nginx proxies /api to the backend.
 
 # Port (auto-set by Koyeb, default: 8000)
 # PORT=8000
@@ -20,7 +21,8 @@ DATABASE_PASSWORD=your-password
 # ===========================================
 # AUTH SERVER (Required)
 # ===========================================
-# URL of the central auth server (the demo/auth project)
+# URL of the central auth server (your-auth-server.koyeb.app)
+# Used by both backend (for token introspection) and frontend (for OAuth redirects)
 AUTH_SERVER_URL=https://your-auth-server.koyeb.app
 
 # ===========================================
@@ -28,9 +30,6 @@ AUTH_SERVER_URL=https://your-auth-server.koyeb.app
 # ===========================================
 # Your deployed app URL
 CORS_ALLOWED_ORIGINS=https://your-app.koyeb.app
-
-# Auth server URL for frontend (client-side)
-NEXT_PUBLIC_AUTH_SERVER_URL=https://your-auth-server.koyeb.app
 
 # Your app's public URL (for OAuth callbacks)
 NEXT_PUBLIC_APP_URL=https://your-app.koyeb.app
@@ -47,13 +46,12 @@ NEXT_PUBLIC_APP_URL=https://your-app.koyeb.app
 # ===========================================
 # LOCAL DEVELOPMENT (Separate Services)
 # ===========================================
-# Uncomment these for local development:
+# For local dev where frontend (3001), backend (8080), and auth (8081) run separately:
 #
 # DATABASE_URL=jdbc:postgresql://localhost:5432/your_db
 # DATABASE_USERNAME=postgres
 # DATABASE_PASSWORD=postgres
 # AUTH_SERVER_URL=http://localhost:8081
 # CORS_ALLOWED_ORIGINS=http://localhost:3001
-# NEXT_PUBLIC_AUTH_SERVER_URL=http://localhost:8081
 # NEXT_PUBLIC_APP_URL=http://localhost:3001
-# NEXT_PUBLIC_API_URL=http://localhost:8080
+# NEXT_PUBLIC_API_URL=http://localhost:8080  # Only needed for local dev!
