--- a/templates/docker/docker-compose.yml
+++ b/templates/docker/docker-compose.yml
@@ -1,5 +1,6 @@
-# Docker Compose for local development
-# This sets up your project alongside the auth server
+# Docker Compose for LOCAL DEVELOPMENT
+# This sets up your project alongside the auth server (running separately on port 8081)
+# For production/unified deployment, use the root Dockerfile instead
 
 version: '3.8'
 
@@ -34,7 +35,6 @@ services:
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: postgres
       AUTH_SERVER_URL: http://host.docker.internal:8081
-      JWT_SECRET: ${JWT_SECRET}
       CORS_ALLOWED_ORIGINS: http://localhost:3001
     ports:
       - "8080:8080"
@@ -48,6 +48,8 @@ services:
       context: ./frontend
       dockerfile: ../docker/Dockerfile.frontend
       args:
+        # These are needed for local dev (separate services)
+        # In unified deployment, nginx proxies /api and AUTH_SERVER_URL is used for both
         NEXT_PUBLIC_API_URL: http://localhost:8080
         NEXT_PUBLIC_AUTH_SERVER_URL: http://localhost:8081
         NEXT_PUBLIC_APP_URL: http://localhost:3001
