NEXT_PUBLIC_APP_URL removed

--- a/templates/.env.example
+++ b/templates/.env.example
@@ -31,8 +31,9 @@ AUTH_SERVER_URL=https://your-auth-server.koyeb.app
 # Your deployed app URL
 CORS_ALLOWED_ORIGINS=https://your-app.koyeb.app
 
-# Your app's public URL (for OAuth callbacks)
-NEXT_PUBLIC_APP_URL=https://your-app.koyeb.app
+# Your app's public URL (optional in unified deployment)
+# OAuth callbacks use browser origin automatically when not set
+# NEXT_PUBLIC_APP_URL=https://your-app.koyeb.app
 
 # ===========================================
 # OPTIONAL SETTINGS
