--- a/templates/nginx/nginx.conf.template
+++ b/templates/nginx/nginx.conf.template
@@ -31,9 +31,26 @@ server {
         proxy_connect_timeout 90s;
     }
 
-    # Health check for backend
+    # Health check for backend (with fallback)
     location /health {
         proxy_pass http://backend/health;
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 5s;
+        # Return 200 if backend is not ready yet (for initial startup)
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @health_fallback;
+    }
+
+    # Fallback health check (nginx is running)
+    location @health_fallback {
+        return 200 '{"status":"starting"}';
+        add_header Content-Type application/json;
+    }
+
+    # Simple nginx health check (always returns 200)
+    location /nginx-health {
+        return 200 '{"status":"ok"}';
+        add_header Content-Type application/json;
     }
 
     # Frontend routes (everything else)
