--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -21,7 +21,13 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     # Preserve X-Forwarded-Proto from upstream (Koyeb LB), fallback to $scheme
-    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+    # Use map variable to properly handle empty header
+    set $forwarded_proto $http_x_forwarded_proto;
+    set $final_proto $forwarded_proto;
+    if ($forwarded_proto = '') {
+        set $final_proto $scheme;
+    }
+    proxy_set_header X-Forwarded-Proto $final_proto;
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
@@ -52,11 +58,15 @@ server {
     location /oauth2/ {
         proxy_pass http://backend/oauth2/;
         proxy_read_timeout 90s;
+        proxy_pass_header Set-Cookie;
+        proxy_set_header Cookie $http_cookie;
     }
 
     location /login/oauth2/ {
         proxy_pass http://backend/login/oauth2/;
         proxy_read_timeout 90s;
+        proxy_pass_header Set-Cookie;
+        proxy_set_header Cookie $http_cookie;
     }
 
     # Health check for backend
