--- a/.env.example
+++ b/.env.example
@@ -49,7 +49,7 @@ MICROSOFT_CLIENT_SECRET=your-microsoft-client-secret
 # ===========================================
 # Your deployed app URL (same for frontend and backend in unified mode)
 CORS_ALLOWED_ORIGINS=https://your-app.koyeb.app
-OAUTH2_REDIRECT_URI=https://your-app.koyeb.app/api/auth/callback
+OAUTH2_REDIRECT_URI=https://your-app.koyeb.app/auth/callback
 # Base URL for OAuth2 callbacks (must be HTTPS in production)
 OAUTH2_BASE_URL=https://your-app.koyeb.app
 
@@ -81,7 +81,7 @@ OAUTH2_BASE_URL=https://your-app.koyeb.app
 # For local development with separate frontend (port 3000) and backend (port 8080):
 #
 # CORS_ALLOWED_ORIGINS=http://localhost:3000
-# OAUTH2_REDIRECT_URI=http://localhost:3000/api/auth/callback
+# OAUTH2_REDIRECT_URI=http://localhost:3000/auth/callback
 #
 # Also create frontend/.env.local with:
 # NEXT_PUBLIC_API_URL=http://localhost:8080
