--- a/.env.example
+++ b/.env.example
@@ -45,13 +45,17 @@ MICROSOFT_CLIENT_ID=your-microsoft-client-id
 MICROSOFT_CLIENT_SECRET=your-microsoft-client-secret
 
 # ===========================================
-# APPLICATION URLs (Required)
+# APPLICATION URLs (Required - CRITICAL!)
 # ===========================================
 # Your deployed app URL (same for frontend and backend in unified mode)
 CORS_ALLOWED_ORIGINS=https://your-app.koyeb.app
-OAUTH2_REDIRECT_URI=https://your-app.koyeb.app/auth/callback
-# Base URL for OAuth2 callbacks (must be HTTPS in production)
+
+# CRITICAL: OAuth2 base URL - where OAuth providers (Google, GitHub, etc.) redirect BACK to
+# This MUST match your deployed domain exactly. If incorrect, OAuth will fail silently!
 OAUTH2_BASE_URL=https://your-app.koyeb.app
+
+# Where to redirect users after successful OAuth (frontend callback page)
+OAUTH2_REDIRECT_URI=https://your-app.koyeb.app/auth/callback
 
 # ===========================================
 # CLIENT APP REDIRECTS (Optional)
