--- a/templates/.env.example
+++ b/templates/.env.example
@@ -14,25 +14,24 @@
 # DATABASE (Required)
 # ===========================================
 # PostgreSQL connection string
-DATABASE_URL=jdbc:postgresql://your-host/your-db
-DATABASE_USERNAME=your-user
-DATABASE_PASSWORD=your-password
+DATABASE_URL=jdbc:postgresql://your-db-host/your-db-name
+DATABASE_USERNAME=your-db-user
+DATABASE_PASSWORD=your-db-password
 
 # ===========================================
-# AUTH SERVER (Required)
+# AUTH SERVER (Required) - IMPORTANT!
 # ===========================================
-# URL of the central auth server (your-auth-server.koyeb.app)
-# Used by backend for token introspection
+# URL of the CENTRAL AUTH SERVER (NOT this app!)
+# This is where users authenticate and tokens are validated
+# Example: https://auth-server-xyz.koyeb.app
 AUTH_SERVER_URL=https://your-auth-server.koyeb.app
-
-# Build-time variable for frontend (set in Dockerfile ARG)
-# VITE_AUTH_SERVER_URL is set from AUTH_SERVER_URL during build
 
 # ===========================================
 # APPLICATION URLs (Required)
 # ===========================================
-# Your deployed app URL
-CORS_ALLOWED_ORIGINS=https://your-app.koyeb.app
+# This app's URL (for CORS)
+# Example: https://my-client-app-xyz.koyeb.app
+CORS_ALLOWED_ORIGINS=https://your-client-app.koyeb.app
 
 # ===========================================
 # OPTIONAL SETTINGS
@@ -44,6 +43,16 @@ CORS_ALLOWED_ORIGINS=https://your-app.koyeb.app
 # APP_NAME=your-project-name
 
 # ===========================================
+# KOYEB BUILD ARGUMENTS
+# ===========================================
+# When deploying to Koyeb, set this build argument:
+#
+# VITE_AUTH_SERVER_URL = https://your-auth-server.koyeb.app
+#
+# This is used at BUILD TIME for the React frontend.
+# It should match AUTH_SERVER_URL above.
+
+# ===========================================
 # LOCAL DEVELOPMENT (Separate Services)
 # ===========================================
 # For local dev where frontend (5173), backend (8080), and auth (8081) run separately:
@@ -53,4 +62,15 @@ CORS_ALLOWED_ORIGINS=https://your-app.koyeb.app
 # DATABASE_PASSWORD=postgres
 # AUTH_SERVER_URL=http://localhost:8081
 # CORS_ALLOWED_ORIGINS=http://localhost:5173
+#
+# Frontend .env (frontend/.env):
 # VITE_AUTH_SERVER_URL=http://localhost:8081
+
+# ===========================================
+# AUTH SERVER CONFIGURATION (on auth server side)
+# ===========================================
+# Make sure your auth server has this configured to allow redirects to your app:
+#
+# OAUTH2_ALLOWED_REDIRECT_DOMAINS=*.koyeb.app
+#
+# This allows the auth server to redirect back to any *.koyeb.app domain.
