--- a/templates/backend-client/.env.example
+++ b/templates/backend-client/.env.example
@@ -13,12 +13,15 @@ DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
 
 # Auth Server Configuration
-# URL of the central auth server (the demo project)
+# URL of the CENTRAL AUTH SERVER (NOT this app!)
+# This is where tokens are validated via introspection
+# Example: http://localhost:8081 (local) or https://auth-server-xyz.koyeb.app (production)
 AUTH_SERVER_URL=http://localhost:8081
 
 # Cache TTL for token introspection (seconds, default: 300 = 5 minutes)
 # AUTH_CACHE_TTL=300
 
 # CORS Configuration
-# Comma-separated list of allowed origins
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+# Comma-separated list of allowed origins (your frontend URL)
+# For local dev with Vite, use port 5173
+CORS_ALLOWED_ORIGINS=http://localhost:5173
