--- a/templates/.env.example
+++ b/templates/.env.example
@@ -23,6 +23,7 @@ DATABASE_PASSWORD=your-db-password
 # ===========================================
 # URL of the CENTRAL AUTH SERVER (NOT this app!)
 # This is where users authenticate and tokens are validated
+# Used by both frontend (OAuth redirects) and backend (token introspection)
 # Example: https://auth-server-xyz.koyeb.app
 AUTH_SERVER_URL=https://your-auth-server.koyeb.app
 
@@ -43,14 +44,13 @@ CORS_ALLOWED_ORIGINS=https://your-client-app.koyeb.app
 # APP_NAME=your-project-name
 
 # ===========================================
-# KOYEB BUILD ARGUMENTS
+# KOYEB DEPLOYMENT
 # ===========================================
-# When deploying to Koyeb, set this build argument:
+# On Koyeb, set AUTH_SERVER_URL as BOTH:
+#   1. Environment variable (for backend at runtime)
+#   2. Build argument (for frontend at build time)
 #
-# VITE_AUTH_SERVER_URL = https://your-auth-server.koyeb.app
-#
-# This is used at BUILD TIME for the React frontend.
-# It should match AUTH_SERVER_URL above.
+# The Dockerfile uses AUTH_SERVER_URL for both frontend and backend.
 
 # ===========================================
 # LOCAL DEVELOPMENT (Separate Services)
