--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     resources:
       static-locations: classpath:/static/
       cache:
-        period: 1h
+        period: 30m
   mvc:
     static-path-pattern: /**
 
